# lng-pinn

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  lng-pinn-plan.md  lng-pinn-v1.1-fixes.md  lng-pinn-v1.2-fixes.md  lng-pinn-v1.3-fixes.md  lng-pinn-v1.4-plan.md  lng-pinn-v1.5-plan.md  pyproject.toml  rerun_minimal.sh  run_rework.sh  run_rework_overnight.sh  run_sens_then_sweep.sh  run_v13.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
data/: README.md
docs/: carbon_incidence.md
paper/: main.tex  mixing_table.tex  paper_macros.tex  refs.bib  seed_significance_table.tex  seed_supplement.tex  surrogate_eval_table.tex
results/tables/: baseline_annual_v1.csv  baseline_annual_v1.parquet  baseline_constant_v1.csv  baseline_constant_v1.parquet  baseline_horizon_v1.csv  baseline_horizon_v1.parquet  baseline_lagged_v1.csv  baseline_lagged_v1.parquet  baseline_v1.csv  baseline_v1.parquet  carbon_ensemble.csv  carbon_sweep.csv  carbon_sweep_co2_0.csv  carbon_sweep_co2_100.csv  carbon_sweep_co2_120.csv  carbon_sweep_co2_160.csv  carbon_sweep_co2_20.csv  carbon_sweep_co2_40.csv  carbon_sweep_co2_60.csv  carbon_sweep_co2_70.csv  carbon_sweep_co2_80.csv  carbon_sweep_co2_90.csv  cost_decomposition.csv  cost_decomposition_delta.csv  cost_decomposition_delta_volmatch.csv  cost_decomposition_summary.csv  cost_decomposition_summary_volmatch.csv  cost_decomposition_volmatch.csv  dispatch_v1.csv  dispatch_v1.parquet  fabrication_diagnostic.csv  fabrication_diagnostic_hard_seed0.csv  fabrication_diagnostic_hard_seed1.csv  fabrication_diagnostic_hard_seed13.csv  fabrication_diagnostic_hard_seed42.csv  fabrication_diagnostic_hard_seed7.csv  fabrication_diagnostic_soft_seed0.csv  fabrication_diagnostic_soft_seed1.csv  fabrication_diagnostic_soft_seed13.csv  fabrication_diagnostic_soft_seed42.csv  (+70 more)
scripts/: 01_pull_entsoe.py  02_build_dataset.py  03_train_pinn.py  03b_augment_dataset.py  04_run_dispatch.py  05_make_figures.py  06_seed_sensitivity.py  07_carbon_sweep.py  08_perfect_foresight.py  09_mixing_sensitivity.py  09_paper_numbers.py  10_benchmark_speed.py  10_benchmark_surrogate.py  11_fabrication_diagnostic.py  12_soft_vs_hard.py  13_carbon_ensemble.py  14_mixing_table.py  15_run_manifest.py  16_cost_decomposition.py  17_tout_audit.py  18_audit_artifacts.py  _inspect_seed_cache.py
src/lng_pinn/: __init__.py  baseline.py  composition.py  dataset.py  diagnostics.py  dispatch.py  market.py  pinn.py  plant.py  plots.py  thermo.py
tests/: test_composition_csv.py  test_mixing_kernels.py  test_pinn_residuals.py  test_plant.py  test_storage_phase.py  test_thermo.py  test_train_cli.py
