[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lng-pinn"
version = "0.1.0"
description = "Composition-aware PINN surrogate for FSRU regasification dispatch under day-ahead electricity prices"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.12.0",
    "pandas>=2.2.1",
    "pyarrow>=15.0.2",
    "coolprop>=6.6.0",
    "entsoe-py>=0.6.8",
    "torch>=2.2.2",
    "pyomo>=6.7.1",
    "matplotlib>=3.8.3",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "ruff>=0.3.4",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lng_pinn"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
