[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lng-pinn"
version = "0.1.0"
description = "Composition-aware PINN surrogate for FSRU regasification dispatch under day-ahead electricity prices"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.12.0",
    "pandas>=2.2.1",
    "pyarrow>=15.0.2",
    "coolprop>=6.6.0",
    "entsoe-py>=0.6.8",
    "torch>=2.2.2",
    "pyomo>=6.7.1",
    "matplotlib>=3.8.3",
    "seaborn>=0.13.2",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "ruff>=0.3.4",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
    "types-requests>=2.31.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lng_pinn"]

# Pull the CUDA build of torch on Windows so the PINN training step (03_train_pinn.py)
# can use the local NVIDIA GPU. Linux CI and macOS continue to resolve torch from PyPI
# (CPU wheel on Linux, MPS-capable universal wheel on macOS).
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'win32'" },
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]  # sys.path.insert must precede src imports

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = false
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
